# rust-slint-example

./: Cargo.toml  build.rs
src/: main.rs  mock.rs
src/controllers/: content_controller.rs  mod.rs
src/model/: mod.rs  state.rs  util.rs
src/model/actions/: load_library_entries.rs  mod.rs  play_library_entry.rs  toggle_play.rs
src/view_model/: content.rs  messages.rs  mod.rs  navbar.rs
ui/: app-window.slint  common.slint  content.slint  detail_list_view.slint  messages.slint  navbar.slint  theme.slint  tile_list_view.slint
